--- a/main.tex
+++ b/main.tex
@@ -71,7 +71,7 @@ Four types of blocks are available:
 \begin{columns}
 	\column{0.49\linewidth}
 		\begin{block}{}
-		This is a block without a title. So there is no title in this block. This is a block without a title. So there is no title in this block. This is a block without a title. So there is no title in this block. This is a block without a title. So there is no title in this block. 
+		This is a block without a title. So there is no title in this block. This is a block without a title. So there is no title in this block. This is a block without a title. So there is no title in this block. 
 
 		\end{block}
 	\column{0.49\linewidth}
@@ -83,10 +83,10 @@ Four types of blocks are available:
 		An \emph{alert} block with a title
 		\end{alertblock}
 
+\end{columns} 
 		\begin{exampleblock}{Block Title}
 		An \emph{example} block with a title
 		\end{exampleblock}
-\end{columns} 
 \end{frame}
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
 
@@ -94,11 +94,11 @@ Four types of blocks are available:
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
 \begin{frame}{{\color{UMYellow} What you need} to typeset this template}
 
-\begin{block}{Metropolis theme}
+\begin{exampleblock}{Metropolis theme}
 Available at {\footnotesize \href{https://github.com/matze/mtheme}{github.com/matze/mtheme}}	
-\end{block}
+\end{exampleblock}
 
-\begin{block}{UM logo files}
+\begin{exampleblock}{UM logo files}
 \begin{itemize}
 \item Available from \href{linktoUM}{UM's website} (internal access only)
 \item Download the following two: 
@@ -108,7 +108,7 @@ Available at {\footnotesize \href{https://github.com/matze/mtheme}{github.com/ma
 	\end{enumerate}
 \item Save these logo files under the {\tt \footnotesize figures} directory located in the same directory that contains the .tex file.
 \end{itemize}
-\end{block}
+\end{exampleblock}
 
 \end{frame}
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
