--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@
 \date{\today}
 \author{Daina Chiba}
 \institute{University of Macau}
-\titlegraphic{\hfill\includegraphics[height=2cm]{figures/UMlogo.png}} % Adds a logo 
+\titlegraphic{\includegraphics[width=3cm]{figures/UM-Logo_V-Black.png}} % Adds a logo 
 
 %-------------------------------------
 % Begin the document
@@ -41,24 +41,49 @@
 
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
 \begin{frame}{{\color{UMYellow} Five colors} defined in the template}
-\begin{columns}
-	\column{0.35\linewidth}
-    	\begin{figure}
-        \centering
-        \includegraphics[height=3cm]{figures/UMlogo.png}
-        \caption{UM Logo}
-        \end{figure}
-	\column{0.64\linewidth}
-        \begin{itemize}
-        \item {\color{UMBlue}\bf UMBlue} is the symbol color of the university.
-        \item {\color{UMLightBlue}\bf UMLightBlue}
-        \item {\color{UMYellow}\bf UMYellow}
-		\item {\color{UMRed}\bf UMRed}
-		\item {\color{UMGreen}\bf UMGreen}
-        \end{itemize}
-	\end{columns} 
+
+{\color{UMBlue}\bf UMBlue} is the symbol color of the university.
+
+In addition, UM's Brand Guidelines document defines the following colors:
+\begin{itemize}
+    \item {\color{UMLightBlue}\bf UMLightBlue}
+    \item {\color{UMYellow}\bf UMYellow}
+	\item {\color{UMRed}\bf UMRed}
+	\item {\color{UMGreen}\bf UMGreen}
+\end{itemize}
 \end{frame}
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
+
+%~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
+\begin{frame}{Logos and icons}
+
+Logos and icons are not included in the package. Please download them from UM website (internal access only): \shorturl{identity.co.um.edu.mo/} 
+
+Logos
+	\begin{columns}
+	\column{0.48\linewidth}
+        \centering
+        \includegraphics[height=3cm]{figures/UM-Logo_V-Black.png}
+	\column{0.48\linewidth}
+        \centering
+        \includegraphics[height=3cm]{figures/UM-Logo_H-Black.png}
+	\end{columns} 
+
+\vspace{10pt}
+
+Icons
+	\begin{columns}
+	\column{0.48\linewidth}
+        \centering
+        \includegraphics[height=1cm]{figures/UM-Icon_Horizontalblue.png}
+	\column{0.48\linewidth}
+        \centering
+        \includegraphics[height=1cm]{figures/UM-Icon_Horizontalyellow.png}
+	\end{columns} 
+
+\end{frame}
+%~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
+
 
 
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
@@ -112,7 +137,7 @@ Available at {\footnotesize \href{https://github.com/matze/mtheme}{github.com/ma
 
 \begin{exampleblock}{UM logo files}
 \begin{itemize}
-\item Available from \href{linktoUM}{UM's website} (internal access only)
+\item Available from \href{https://identity.co.um.edu.mo/}{UM's website} (internal access only)
 \item Download the following two: 
 	\begin{enumerate}
 	\item \href{linktoUM}{\footnotesize {UMlogo.png}}
