Options for color and logo
Move the options from the style file to the template files

--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,59 @@
 % This template uses the Metropolis theme by Matthias Vogelgesang (https://github.com/matze/mtheme). 
 
 
+%===========================================================%
+% Options for appearances
+%===========================================================%
+
+%------------------------------------
+% If you want UM Blue as the main 
+% color, remove comment from the 
+% following two lines
+%------------------------------------
+%\setbeamercolor{frametitle}{fg= black!2, bg=UMBlue} % Frame title color
+%\setbeamercolor{progress bar}{fg=UMYellow, bg=UMLightBlue} % Progress bar
+
+%------------------------------------
+% UM Logo
+%------------------------------------
+% Logo in the header -- comment it out if not necessary
+
+%-------------
+% Version 1
+%-------------
+% If you want a simpler logo (um澳大) in white...
+
+%\addtobeamertemplate{frametitle}{}{%
+%    \begin{textblock*}{100mm}(0.99\textwidth,-0.4cm)
+%        \includegraphics[width=1cm]{figures/UM-Icon_Horizontalwhite.png}
+%    \end{textblock*}}
+
+%-------------
+% Version 2
+%-------------
+% If you want a simpler logo (um澳大) in yellow...
+
+%\addtobeamertemplate{frametitle}{}{%
+%    \begin{textblock*}{100mm}(0.99\textwidth,-0.4cm)
+%        \includegraphics[width=1cm]{figures/UM-Icon_Horizontalyellow.png}
+%    \end{textblock*}}
+
+%-------------
+% Version 3
+%-------------
+% If you want a bigger logo ...
+
+\addtobeamertemplate{frametitle}{}{%
+    \begin{textblock*}{100mm}(0.87\textwidth,-1.3cm)
+        \includegraphics[width=2.3cm]{figures/UM-Logo_H-White.png}
+    \end{textblock*}}
+
+
+
+%===========================================================%
+% Document information
+%===========================================================%
+
 %-------------------------------------
 % Title information
 %-------------------------------------
