Two versions of template files
Created a version with UM Blue and another version with UM Light Blue

--- a/main_UMBlue.tex
+++ b/main_UMBlue.tex
@@ -173,11 +173,15 @@ Please download them from \href{https://identity.co.um.edu.mo/}{\myURL UM's iden
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
 
 
+
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
 \begin{frame}{{\color{UMYellow} What you need} to typeset this template}
 
-\begin{exampleblock}{Metropolis theme}
-Available from \href{https://github.com/matze/mtheme}{\myURL github.com/matze/mtheme}	
+\begin{exampleblock}{Campus picture}
+\begin{itemize}
+\item Go to \href{https://www.um.edu.mo/about-um/identity/}{\myURL About UM / Identity} (public)
+\item Download ``Desktop Wallpapers'' (.zip) and extract it. Place the folder under the {\tt \footnotesize figures} sub-directory 
+\end{itemize}
 \end{exampleblock}
 
 \begin{exampleblock}{UM logo \& icon files}
@@ -196,6 +200,7 @@ Available from \href{https://github.com/matze/mtheme}{\myURL github.com/matze/mt
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
 
 
+
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
 {
 \setbeamercolor{background canvas}{bg=UMBlue}
@@ -211,11 +216,12 @@ Available from \href{https://github.com/matze/mtheme}{\myURL github.com/matze/mt
 
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~%
 {
-\usebackgroundtemplate{\includegraphics[height=\paperheight]{figures/UMcampus}}
+\usebackgroundtemplate{\includegraphics[height=\paperheight]{figures/Desktop-Wallpapers/Desktop Wallpaper (ver 1).jpg}}
 \frame{
 
 \color{white} \large
-We can insert a background image like this.
+We can insert a background image like this.\\
+(source: \href{https://www.um.edu.mo/about-um/identity/}{um.edu.mo/about-um/identity/})
 
 	}
 }
